modularize the whole system